--- a/TAF.Web/Views/CarInfo/_CarInfoIndex.cshtml
+++ b/TAF.Web/Views/CarInfo/_CarInfoIndex.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TAF.Utility.KeyValue<List<SCBF.BaseInfo.Dto.SysDictionaryListDto>, List<TAF.Utility.KeyValue<Guid, string>>, List<SCBF.BaseInfo.Dto.SysDictionaryListDto>>
+
 <div class="row">
     <div class="col-xs-12 col-md-12">
         <div class="widget">
@@ -12,28 +13,28 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="pre-scrollable">
-                            <table class="table table-striped table-hover table-bordered " style="width: 1700px">
+                            <table class="table table-striped table-hover table-bordered "  style="width: 1750px">
                                 <thead>
                                 <tr role="row">
-                                    <th style="width: 100px;">
+                                    <th style="width: 150px;">
                                         车辆型号
                                     </th>
-                                    <th style="width: 100px;">
+                                    <th style="width: 150px;">
                                         车架号
                                     </th>
-                                    <th style="width: 100px;">
+                                    <th style="width: 150px;">
                                         发动机号
                                     </th>
                                     <th style="width: 100px;">
                                         油料标号
                                     </th>
-                                    <th style="width: 100px;">
+                                    <th style="width: 200px;">
                                         车牌号
                                     </th>
                                     <th style="width: 100px;">
                                         基础公里数
                                     </th>
-                                    <th style="width: 400px;">
+                                    <th style="width: 200px;">
                                         装备时间
                                     </th>
                                     <th style="width: 100px;">
@@ -51,7 +52,7 @@
                                     <th style="width: 100px;">
                                         油耗限额(冬)
                                     </th>
-                                    <th style="width: 200px;">
+                                    <th style="width: 250px;">
                                         操作
                                     </th>
                                 </tr>
@@ -73,14 +74,6 @@
                                     <th>
                                     </th>
                                     <th>
-                                        <div class="row">
-                                            <div class="col-sm-6">
-                                                <input type="text" class="form-control" placeholder="装备时间起" v-model="queryEntity.zbsjFrom" id="zbsjFrom" readonly="readonly"/>
-                                            </div>
-                                            <div class="col-sm-6">
-                                                <input type="text" class="form-control" placeholder="装备时间止" v-model="queryEntity.zbsjTo" id="zbsjTo" readonly="readonly"/>
-                                            </div>
-                                        </div>
                                     </th>
                                     <th>
                                         <select id="searchClzk" style="width: 100%" v-model="queryEntity.clzk">
@@ -131,6 +124,7 @@
                                     <td>{{item.oilWearWinter}}</td>
                                     <td>
                                         <row-command :id="item.id" title="编辑" :name="item.cph"></row-command>
+                                        <button type="button" class="btn btn-default  " v-on:click="showAttachmentsDialog('附件管理',item.id) "><i class="fa  fa-paperclip"></i> 附件</button>
                                     </td>
                                 </tr>
                                 </tbody>
@@ -153,8 +147,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">车辆型号<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">车辆型号<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <input type="text" class="form-control " placeholder="必填" name="clxh" v-model="item.clxh" v-validate:clxh="{required:true}"/>
                                 </span>
@@ -165,8 +159,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">车架号<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">车架号<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <input type="text" class="form-control " placeholder="必填" name="cjh" v-model="item.cjh" v-validate:cjh="{required:true}"/>
                                 </span>
@@ -177,8 +171,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">发动机号<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">发动机号<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <input type="text" class="form-control " placeholder="必填" name="fdjh" v-model="item.fdjh" v-validate:fdjh="{required:true}"/>
                                 </span>
@@ -189,15 +183,15 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">油料标号<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">油料标号<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <select id="octaneRatingId" style="width: 100%" v-model="queryEntity.octaneRatingId"  >
                                         <option value="" selected="">请选择...</option>
                                         @{
                                             for (var i = 0; i < Model.Item3.Count; i++)
                                             {
-                                                    <option value="@Model.Item3[i].Id" >@Model.Item3[i].Value</option>
+                                                <option value="@Model.Item3[i].Id" >@Model.Item3[i].Value</option>
                                             }
 
                                         }
@@ -210,8 +204,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">车牌号<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">车牌号<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <input type="text" class="form-control " placeholder="必填" name="cph" v-model="item.cph" v-validate:cph="{required:true}"/>
                                 </span>
@@ -222,9 +216,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">基础公里数<span class="red">*</span></label>
-                            <div class="col-sm-10">
-                                    <input type="number" class="form-control " placeholder="必填" name="jcgls" v-model="item.jcgls" v-validate:jcgls="{required:true}" />
+                            <label class="col-sm-3 control-label no-padding-right">基础公里数<span class="red">*</span></label>
+                            <div class="col-sm-9">
+                                <input type="number" class="form-control " placeholder="必填" name="jcgls" v-model="item.jcgls" v-validate:jcgls="{required:true}" />
                             </div>
                         </div>
                     </div>
@@ -232,8 +226,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">装备时间<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">装备时间<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <input class="form-control  " placeholder="必填" type="text" id="datePickerZbsj" readonly="readonly" v-model="item.zbsj" name="zbsj" v-validate:zbsj="{required:true,dateTime:true}">
                                     <i class="fa fa-calendar"></i>
@@ -245,15 +239,15 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">车辆状况</label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">车辆状况</label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <select id="clzk" style="width: 100%" v-model="item.clzk">
                                         <option value="" >请选择...</option>
                                         @{
                                             for (var i = 0; i < Model.Key.Count; i++)
                                             {
-                                                    <option value="@Model.Key[i].Id" >@Model.Key[i].Value</option>
+                                                <option value="@Model.Key[i].Id" >@Model.Key[i].Value</option>
                                             }
 
                                         }
@@ -266,8 +260,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">行驶证号<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">行驶证号<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <input type="text" class="form-control " placeholder="必填" name="xszh" v-model="item.xszh" v-validate:xszh="{required:true}"/>
                                 </span>
@@ -278,8 +272,29 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">油箱限额<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">驾驶员<span class="red">*</span></label>
+                            <div class="col-sm-9">
+                                <span class="input-icon icon-right">
+                                    <select id="driver" style="width: 100%" v-model="item.driver">
+                                        <option value="">请选择...</option>
+                                        @{
+                                            foreach (var item in Model.Value)
+                                            {
+                                                <option value="@item.Key">@item.Value</option>
+                                            }
+
+                                        }
+                                    </select>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label no-padding-right">油箱限额<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <input type="number" class="form-control " placeholder="必填" name="yxxe" v-model="item.yxxe" v-validate:yxxe="{required:true}" />
                             </div>
                         </div>
@@ -288,8 +303,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">百公里油耗(夏季)<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">百公里油耗(夏季)<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <input type="number" class="form-control " placeholder="必填" name="oilWearSummer" v-model="item.oilWearSummer" v-validate:oilWearSummer="{required:true}" />
                             </div>
                         </div>
@@ -298,8 +313,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">百公里油耗(冬季)<span class="red">*</span></label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">百公里油耗(冬季)<span class="red">*</span></label>
+                            <div class="col-sm-9">
                                 <input type="number" class="form-control " placeholder="必填" name="oilWearWinter" v-model="item.oilWearWinter" v-validate:oilWearWinter="{required:true}" />
                             </div>
                         </div>
@@ -308,8 +323,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">整备质量</label>
-                            <div class="col-sm-10">
+                            <label class="col-sm-3 control-label no-padding-right">整备质量</label>
+                            <div class="col-sm-9">
                                 <span class="input-icon icon-right">
                                     <textarea rows="4" class="form-control " name="zbzl" v-model="item.zbzl"></textarea>
                                 </span>
@@ -321,4 +336,50 @@
         </validator>
     </div>
 </template>
+
+
+
+<!--上传附件-->
+<div class="bootbox modal fade modal-primary in" id="attachmentsDialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">{{ modifyEntity.modifyTitle }}</h4>
+                <div v-model="title"></div>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label no-padding-right">上传<span class="red">*</span></label>
+                            <div class="col-sm-10">
+                                <input type="file" name="fileUpload" id="fileUpload" class="fileUpload" title="上传附件" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <table class="table table-striped table-hover table-bordered ">
+                            <tbody>
+                            <tr v-for="o in list4">
+                                <td><a href="/app_data/attachment/{{o.item3}}">{{o.value}}</a></td>
+                                <td>
+
+                                    <button type="button" class="btn   edit" v-on:click="removeAttach(o.key)"><i class="fa  fa-trash-o"></i> 删除</button>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="~/assets/js/liteuploader.js"></script>
 <script src="~/Views/CarInfo/carInfo.js"></script>
